# nova-medical-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  streamlit_app.py
api/: main.py  settings.py
docs/plans/: 2026-02-12-streamlit-ui-design.md  2026-02-28-remote-url-transcription-design.md
nova/: __init__.py  config.py  transcribe.py
tests/: conftest.py  helpers.py  test_api.py  test_main.py  test_results.py  test_streamlit_app.py  test_transcribe.py
tests/data/audio/: generate.py
