[project]
name = "medical-dictation"
version = "0.1.0"
description = "Streamlit web app that transcribes medical dictation using Deepgram's Nova-3 Medical model"
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk==5.3.2",
    "python-dotenv==1.2.1",
    "streamlit==1.54.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.0",
    "ty==0.0.16",
]
