[project]
name = "nova-medical-pipeline"
version = "0.2.0"
description = "Transcribe audio files with the Deepgram Nova-3 Medical model."
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk==7.3.0",
    "fastapi>=0.136.3",
    "python-dotenv==1.2.1",
    "python-multipart>=0.0.32",
    "streamlit==1.54.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest==9.0.2",
    "ruff==0.15.0",
    "ty==0.0.16",
]
